--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -10,6 +10,7 @@
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
 
     <application
+        android:name="MyApp" 
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name" >
         <activity
@@ -17,12 +18,11 @@
             android:name=".RemoteActivity" >
             <intent-filter >
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".StartN64"></activity>
-
+        <activity android:name=".EmuN64"></activity>
+        <activity android:name=".EmuPSX"></activity>
+        <activity android:name=".Machine"></activity>
     </application>
-
 </manifest>
