--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,28 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.dearing.remote"
-    android:versionCode="0"
-    android:versionName="0.01" >
+          package="com.dearing.remote"
+          android:versionCode="1"
+          android:versionName="0.02">
 
-    <uses-sdk android:minSdkVersion="10" />
+    <uses-sdk android:minSdkVersion="10"/>
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
 
     <application
-        android:name="MyApp" 
-        android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name" >
+            android:name="MyApp"
+            android:icon="@drawable/ic_launcher"
+            android:label="@string/app_name">
         <activity
-            android:label="@string/app_name"
-            android:name=".RemoteActivity" >
-            <intent-filter >
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
+                android:label="@string/app_name"
+                android:name=".RemoteActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".EmuN64"></activity>
-        <activity android:name=".EmuPSX"></activity>
-        <activity android:name=".Machine"></activity>
+        <activity android:name=".EmuN64"/>
+        <activity android:name=".EmuPSX"/>
+        <activity android:name=".Machine"/>
+        <activity android:name=".RomsN64"/>
+        <activity android:name=".RomsPSX"/>
     </application>
 </manifest>
