migrate to preference support and common confirm dialog for machine instructions

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -26,5 +26,6 @@
         <activity android:name=".Machine"/>
         <activity android:name=".RomsN64"/>
         <activity android:name=".RomsPSX"/>
+        <activity android:name=".SettingsActivity"/>
     </application>
 </manifest>
